kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracer-test
spec:
  selector:
    matchLabels:
      app: tracer-test
  template:
    metadata:
      labels:
        app: tracer-test
    spec:
      containers:
      - name: tracer-test
        image: registry.digitalocean.com/digitla-repo/test:v20 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
