kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracer-test
spec:
  selector:
    app: tracer-test
  ports:
  - port: 80
    targetPort: 8080
