kubernetes-manifests/gateway.yaml
# istio gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tracer-test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - tracer-test.istio.izad.io
